--- a/PW_OrdenTrabajo/css/style.css
+++ b/PW_OrdenTrabajo/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600&display=swap');
-
 :root {
     --main-color: #005195;
     --text-gold: #B4AA9B;
@@ -13,7 +11,7 @@
     text-decoration: none;
     list-style-type: none;
     box-sizing: border-box;
-    font-family: 'Merriweather', sans-serif;
+    font-family: 'Assistant', sans-serif;
 }
 
 a:link, a:visited, a:active {
@@ -412,10 +410,10 @@ table thead tr {
 }
 
 table thead th {
-    padding: 1rem 0rem;
-    text-align: left;
+    padding: 1rem 0.3rem;
+    text-align: center;
     color: #444;
-    font-size: .8rem;
+    font-size: .9rem;
 }
 
 table thead th:first-child {
@@ -423,12 +421,13 @@ table thead th:first-child {
 }
 
 table tbody td {
-    padding: 1rem 0rem;
+    padding: 1rem 0.3rem;
     color: #444;
 }
 
 td{
-    font-size: .6rem;
+    font-size: .7rem;
+    text-align: center;
 }
 
 table tbody td:first-child {
