--- a/PW_OrdenTrabajo/css/style.css
+++ b/PW_OrdenTrabajo/css/style.css
@@ -1,10 +1,16 @@
+/*Colores principales*/
 :root {
     --main-color: #005195;
-    --text-gold: #B4AA9B;
+    --color_gold: #B4AA9B;
+    --gold_70: #CAC2B6;
+
     --color-sky: #82AFD7;
+    --blue_70: #A4C6E2;
+    --blue_45: #C4DAEC;
+    --blue_20: #E5EEF7;
 
 }
-
+/*Formato general*/
 * {
     margin: 0;
     padding: 0;
@@ -13,15 +19,15 @@
     box-sizing: border-box;
     font-family: 'Assistant', sans-serif;
 }
-
+/*Limpiar formato*/
 a:link, a:visited, a:active {
     text-decoration:none;
 }
-
+/*Formato checkbox*/
 #menu-toggle {
     display: none;
 }
-
+/*Menu lateral*/
 .sidebar {
     position: fixed;
     height: 100%;
@@ -30,22 +36,28 @@ a:link, a:visited, a:active {
     bottom: 0;
     top: 0;
     z-index: 100;
-    background: var(--main-color);
+    background: var(--blue_20);
     transition: left 300ms;
 }
 
+ul {
+    list-style: none;
+    padding-left: 0.5rem;
+}
+/*Logo*/
 .side-header {
-    box-shadow: 0px 5px 5px -5px rgb(0 0 0 /10%);
     background: var(--main-color);
-    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 0.2rem;
+    height: 60px;
 }
-
-.side-header h3, side-head span {
-    color: #fff;
-    font-weight: 400;
+.side-bottom span{
+    background-color: yellow;
+}
+.side-header span {
+    background-color: red;
 }
 
 .side-content {
@@ -77,32 +89,33 @@ a:link, a:visited, a:active {
 
 .profile {
     text-align: center;
-    padding: 2rem 0rem;
+    padding: 1.5rem 0rem;
 }
 
 .bg-img {
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 50%;
-    background-size: cover;
+}
+
+.logoGrammer{
+    text-align: center;
+    padding-bottom: 1rem;
+    padding-top: 0.5rem;
 }
 
 .logoGrammer-img {
-    height: 80px;
-    width: 80px;
+    height: 40px;
+    width: 40px;
     display: inline-block;
-    margin: 0 auto .5rem auto;
-    border: 3px solid #899DC1;
+    margin: .5rem  .5rem ;
 }
 
-.logoGrammer h4 {
-    color: #fff;
-    font-weight: 500;
-}
-
-.logoGrammer small {
-    color: #899DC1;
-    font-weight: 600;
+.logoGrammer2-img{
+    height: 70px;
+    width: 110px;
+    display: inline-block;
+    margin: .1rem  .1rem ;
 }
 
 .sidebar {
@@ -123,11 +136,11 @@ ul {
 }
 
 .side-menu a.active {
-    background: #2B384E;
+    background: #605296;
 }
 
 .side-menu a.active span, .side-menu a.active small {
-    color: #fff;
+    color: var(--color_gold);
 }
 
 .side-menu a span {
@@ -137,13 +150,12 @@ ul {
 }
 
 .side-menu a span, .side-menu a small {
-    color: #899DC1;
+    color: var(--blue_70);
 }
-
+/*Menu lateral reducido*/
 #menu-toggle:checked ~ .sidebar {
     width: 60px;
 }
-
 #menu-toggle:checked ~ .sidebar .side-header span {
     display: none;
 }
@@ -166,7 +178,6 @@ ul {
     font-size: 1.3rem;
 }
 
-
 .main-content {
     margin-left: 165px;
     width: calc(100% - 165px);
@@ -181,7 +192,7 @@ header {
     z-index: 100;
     height: 60px;
     box-shadow: 0px 5px 5px -5px rgb(0 0 0 /10%);
-    background: #fff;
+    background: var(--blue_20);
     transition: left 300ms;
 }
 
@@ -300,7 +311,7 @@ main {
 
 .card-head span {
     font-size: 3.2rem;
-    color: var(--text-gold);
+    color: var(--color_gold);
 }
 
 .card-progress small {
@@ -323,19 +334,19 @@ main {
 }
 
 .indicator.one {
-    background: #22baa0;
+    background: #0AA0E1;
 }
 
 .indicator.two {
-    background: #11a8c3;
+    background: #69A032;
 }
 
 .indicator.three {
-    background: #f6d433;
+    background: #322873;
 }
 
 .indicator.four {
-    background: #f25656;
+    background: #E10014;
 }
 
 .records {
