--- a/PW_OrdenTrabajo/css/style.css
+++ b/PW_OrdenTrabajo/css/style.css
@@ -43,7 +43,7 @@ a:link, a:visited, a:active {
 
 ul {
     list-style: none;
-    padding-left: 0rem;
+    padding-left: 0;
 }
 /*Logo*/
 .side-header {
@@ -53,12 +53,6 @@ ul {
     align-items: center;
     padding-top: 0.2rem;
     height: 60px;
-}
-.side-bottom span{
-    background-color: yellow;
-}
-.side-header span {
-    background-color: red;
 }
 
 .side-content {
@@ -90,7 +84,7 @@ ul {
 
 .profile {
     text-align: center;
-    padding: 1.5rem 0rem;
+    padding: 1.5rem 0;
 }
 
 .logoGrammer2-img{
@@ -132,7 +126,7 @@ ul {
 
 .side-menu a {
     display: block;
-    padding: 1.1rem 0rem;
+    padding: 1.1rem 0;
 }
 
 .side-menu a.active {
@@ -161,11 +155,6 @@ ul {
 }
 
 #menu-toggle:checked ~ .main-content {
-    margin-left: 60px;
-    width: calc(100% - 60px);
-}
-
-#menu-toggle:checked ~ .header {
     margin-left: 60px;
     width: calc(100% - 60px);
 }
@@ -201,7 +190,7 @@ header {
     left: 165px;
     z-index: 100;
     height: 60px;
-    box-shadow: 0px 5px 5px -5px rgb(0 0 0 /10%);
+    box-shadow: 0 5px 5px -5px rgb(0 0 0 /10%);
     background: var(--blue_20);
     transition: left 300ms;
 }
@@ -213,7 +202,7 @@ header {
 
 .header-content {
     justify-content: space-between;
-    padding: 0rem 1rem;
+    padding: 0 1rem;
 }
 
 .header-content label:first-child span {
@@ -301,7 +290,7 @@ main {
 }
 
 .card {
-    box-shadow: 0px 5px 5px -5px rgb(0 0 0 / 10%);
+    box-shadow: 0 5px 5px -5px rgb(0 0 0 / 10%);
     background: #fff;
     padding: 1rem;
     border-radius: 3px;
@@ -331,7 +320,7 @@ main {
 }
 
 .card-indicator {
-    margin: .7rem 0rem;
+    margin: .7rem 0;
     height: 10px;
     border-radius: 4px;
     background: #e9edf2;
@@ -360,7 +349,7 @@ main {
 }
 
 .records {
-    box-shadow: 0px 5px 5px -5px rgb(0 0 0 / 10%);
+    box-shadow: 0 5px 5px -5px rgb(0 0 0 / 10%);
     background: #fff;
     border-radius: 3px;
 }
@@ -394,7 +383,7 @@ input, button, select {
     border-radius: 3px;
     display: inline-block;
     width: 75px;
-    padding: 0rem .5rem;
+    padding: 0 .5rem;
     margin-right: .8rem;
     color: #666;
 }
@@ -404,7 +393,7 @@ input, button, select {
     color: #fff;
     height: 37px;
     border-radius: 4px;
-    padding: 0rem 1rem;
+    padding: 0 1rem;
     border: none;
     font-weight: 600;
 }
@@ -548,7 +537,7 @@ table tbody tr {
     }
 
     #menu-toggle:checked ~ .main-content header {
-        left: 0px;
+        left: 0;
     }
 
     table {
