--- a/PW_OrdenTrabajo/css/style.css
+++ b/PW_OrdenTrabajo/css/style.css
@@ -153,6 +153,9 @@ ul {
 .side-menu a span, .side-menu a small {
     color: var(--blue_70);
 }
+.side-menu span:hover, .side-menu small:hover {
+    color: var(--main-color);
+}
 /*Menu lateral reducido*/
 #menu-toggle:checked ~ .sidebar {
     width: 60px;
@@ -257,7 +260,7 @@ header {
     align-items: center;
 }
 
-.user div, .client-img {
+.user div, .user-img {
     height: 40px;
     width: 40px;
     margin-right: 1rem;
@@ -368,12 +371,12 @@ main {
     align-items: center;
 }
 
-.add, .browse {
+.search, .browse {
     display: flex;
     align-items: center;
 }
 
-.add span {
+.search span {
     display: inline-block;
     margin-right: .6rem;
     font-size: .9rem;
@@ -384,7 +387,7 @@ input, button, select {
     outline: none;
 }
 
-.add select, .browse input, .browse select {
+.search select, .browse input, .browse select {
     height: 35px;
     border: 1px solid #b0b0b0;
     border-radius: 3px;
@@ -395,7 +398,7 @@ input, button, select {
     color: #666;
 }
 
-.add button {
+.search button {
     background: var(--main-color);
     color: #fff;
     height: 37px;
@@ -458,24 +461,24 @@ table tbody tr {
     border-bottom: 1px solid #dee2e8;
 }
 
-.client {
+.user {
     display: flex;
     align-items: center;
 }
 
-.client-img {
+.user-img {
     margin-right: .5rem;
     border: 2px solid #b0b0b0;
     height: 45px;
     width: 45px;
 }
 
-.client-info h4 {
+.user-info h4 {
     color: #555;
     font-size: .95rem;
 }
 
-.client-info small {
+.user-info small {
     color: #777;
 }
 
@@ -483,17 +486,6 @@ table tbody tr {
     display: inline-block;
     font-size: 1.5rem;
     margin-right: .5rem;
-}
-
-.paid {
-    display: inline-block;
-    text-align: center;
-    font-weight: 600;
-    color: var(--main-color);
-    background: #e5f8ed;
-    padding: .5rem 1rem;
-    border-radius: 20px;
-    font-size: .8rem;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -506,9 +498,7 @@ table tbody tr {
 }
 /*Tabla responsive*/
 @media only screen and (max-width: 900px) {
-    th:nth-child(2), td:nth-child(2) {
-        display: none;
-    }
+
 }
 
 
@@ -588,7 +578,7 @@ table tbody tr {
     display:none;
 }
 /*tabla-formulario*/
-table{
+.nuevaOrdenTabla table{
     table-layout: fixed;
     width:100%;
 }
@@ -611,3 +601,8 @@ table{
     align-self: center;
 }
 
+.divTitle{
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+}
